fixed responsive buttons on mobile and made forms responsive >500 screens

--- a/css/index.css
+++ b/css/index.css
@@ -196,7 +196,7 @@ header {
     flex-direction: column-reverse;
     width: 100%;
     height: auto;
-    background: url('../img/tablet\ header.jpg') 100% 100% no-repeat;
+    background: url('../img/active-activity-adult-1472887\ \(3\).jpg') 100% 100% no-repeat;
   }
 }
 @media (max-width: 800px) {
@@ -219,6 +219,11 @@ header .navigation {
   justify-content: center;
 }
 @media (max-width: 500px) {
+  header .navigation {
+    flex-direction: column;
+  }
+}
+@media (max-width: 800px) {
   header .navigation {
     flex-direction: column;
   }
@@ -247,10 +252,6 @@ header .navigation .navbtn {
   justify-content: center;
   border: 2px solid white;
 }
-header .navigation .navbtn:hover {
-  background-color: #4f5a5f;
-  color: #ffd700;
-}
 @media (max-width: 500px) {
   header .navigation .navbtn {
     width: 50%;
@@ -258,11 +259,9 @@ header .navigation .navbtn:hover {
     padding: 5% 50%;
   }
 }
-@media (max-width: 800px) {
-  header .navigation .navbtn {
-    width: 50%;
-    padding: 3%;
-  }
+header .navigation .navbtn:hover {
+  background-color: #4f5a5f;
+  color: #ffd700;
 }
 header img {
   width: 60%;
@@ -325,7 +324,6 @@ footer p {
 .aboutUs .workoutClass img {
   width: 50%;
   height: auto;
-  border-top: dashed 2px lightgray;
 }
 @media (max-width: 500px) {
   .aboutUs .workoutClass img {
@@ -433,7 +431,7 @@ footer p {
     background-color: #ecf4f3;
     margin: 0 10px 20px;
     cursor: pointer;
-    width: 300px;
+    width: 75%;
     height: 45px;
     font-size: 2rem;
     border-radius: 10px;
@@ -485,7 +483,7 @@ footer p {
 }
 @media (max-width: 500px) {
   .hostingClass input {
-    width: 200px;
+    width: 100%;
   }
 }
 .hostingClass .row3 {
@@ -497,7 +495,7 @@ footer p {
 }
 @media (max-width: 500px) {
   .hostingClass textarea {
-    width: 300px;
+    width: 70%;
   }
 }
 .hostingClass .actions {
